test/resources/type-checking/good/VariableOuterBlock.cc
int main()
{
  int x = 12;

  {
    int y = 5;
    x = (2 + 4 * y);
  }

  return 0;
}
