test/resources/type-checking/bad/Assignment1.cc
int main() {
  true = (1 + 1);

  return 0;
}
